some more cleanup and fixed final styling bug in publisher section of productie (spacing was off due to missing class).

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,4 +1,3 @@
-
 /*********************** START OF PAGE CSS CUSTOMIZATION ***********************
  * Author: Walter Schreppers
  ******************************************************************************/
@@ -33,8 +32,6 @@ a.grey-button.disabled{
   border: 1px solid #ccc;
   background-color: #ccc;
 }
-
-
 
 a.cancel-button {
   display: inline-block;
@@ -169,78 +166,6 @@ input[type=submit]:disabled.cancel{
 }
 
 
-.login_logout {
-    float: right;
-    padding-top: 2px;
-}
-
-.login_logout a {
-  border: 1px solid #bac7d1;
-  background-color: #26a4cf;
-  padding: 10px;
-  border-radius: 4px;
-  color: #fff;
-  text-decoration: none;
-}
-
-.login_logout a:hover {
-  background-color: #46a4ff;
-}
-
-.saml {
-  margin-left: 34%;
-  margin-top: 5px;
-}
-
-.sticky-submit-button {
-  /*
-    position: fixed;
-    bottom: 20px;
-    right: 14%;
-  */
-  position: -webkit-sticky;
-  position: sticky;
-  bottom: 20px;
-  float: right;
-}
-
-.label {
-  min-width: 122px;
-}
-
-.pu {
-  margin-top: -3px;
-}
-
-.narrow-input {
-  width: 18em;
-}
-
-hr {
-  margin-top: -14px;
-  background: #363636;
-  height: 1px;
-  /* imho this looks nicer:
-   * display: none;
-   */
-}
-
-.minimize-icon-wrapper{
-  float: right;
-}
-
-.icon-folded {
-  display: none;
-}
-
-/* make it more visible what controls are readonly */
-.input[readonly], .textarea[readonly] {
-    box-shadow: none;
-    background-color: #eee;
-    border: 1px solid #ddd;
-}
-
-
 /* menu login/logout tweaks to pull to right */
 @media screen and (min-width: 1024px){
   .navbar-login-logout {
@@ -318,7 +243,55 @@ input[type=button].spring:hover {
   animation-timing-function: ease;
   animation-iteration-count: 1;
 }
-/*********************** END OF CSS ANIMATION EYE CANDY ***********************/
+
+
+/************************ SAML LOGIN/LOGOUT STYLING **************************/
+.login_logout {
+    float: right;
+    padding-top: 2px;
+}
+
+.login_logout a {
+  border: 1px solid #bac7d1;
+  background-color: #26a4cf;
+  padding: 10px;
+  border-radius: 4px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.login_logout a:hover {
+  background-color: #46a4ff;
+}
+
+
+.label {
+  min-width: 122px;
+}
+
+/*
+.pu {
+  margin-top: -3px;
+}
+
+.narrow-input {
+  width: 18em;
+}
+*/
+
+hr {
+  margin-top: -14px;
+  background: #363636;
+  height: 1px;
+  /* imho this looks nicer:
+   * display: none;
+   */
+}
+.saml {
+  margin-left: 34%;
+  margin-top: 5px;
+}
+
 
 .saml-login-page {
   background: url('/static/images/saml_login_background.jpg') no-repeat center;
@@ -353,7 +326,42 @@ input[type=button].spring:hover {
   }
 }
 
-/* metadata select productie component styling */
+#saml_login_box {
+  max-width: 410px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+/**************************** METADATA EDIT STYLING ***************************/
+.minimize-icon-wrapper{
+  float: right;
+}
+
+.icon-folded {
+  display: none;
+}
+
+/* make it more visible what controls are readonly */
+.input[readonly], .textarea[readonly] {
+    box-shadow: none;
+    background-color: #eee;
+    border: 1px solid #ddd;
+}
+
+
+.sticky-submit-button {
+  /*
+    position: fixed;
+    bottom: 20px;
+    right: 14%;
+  */
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 20px;
+  float: right;
+}
+
 .prd-subtitle {
   width: 6em;
   display: inline-block;
@@ -395,7 +403,6 @@ input[type=button].spring:hover {
   display: none;
 }
 
-/* make subtitles in algemene metadata more compact */
 h3.subtitle{
   color: #363636;
   font-weight: bold;
@@ -421,12 +428,6 @@ h3.subtitle{
   margin-left: 5px !important;
 }
 
-#saml_login_box {
-  max-width: 410px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 #alert_box {
   max-width: 410px;
   margin-left: auto;
@@ -443,4 +444,8 @@ h3.subtitle{
 
 #production_section{
   display: none;
+}
+
+.form-footer-spacing {
+  height: 70px;
 }
